# site-django

./: .env.example  .gitignore  Makefile  pyproject.toml  requirements.txt
backend/apps/content/: admin.py  apps.py  forms.py  urls.py
backend/apps/content/migrations/: 0001_initial.py  0002_auto_20220615_0147.py
backend/apps/content/models/: __init__.py  feedback.py  portfolio.py  price_service.py
backend/apps/content/views/: __init__.py  feedback.py  portfolio.py  price_service.py
backend/apps/users/: admin.py
backend/apps/users/management/commands/: createadmin.py
backend/apps/users/migrations/: 0002_alter_user_id.py
backend/src/: urls.py  views.py
backend/src/settings/: custom.py
backend/src/settings/base/: apps.py  middlewares.py
backend/src/settings/components/: __init__.py
backend/src/settings/environments/: common.py  development.py
frontend/static/assets/css/: bootstrap.min.css  responsive.css  style.css
frontend/templates/: feedback.html  home.html  landing.html  portfolio.html  price.html  thanks.html
frontend/templates/components/: footer.html  header.html
frontend/templates/layouts/: base.html  site-layout.html
frontend/templates/old/: feedback.html  index.html  port.html  price.html
